Dodanie sekcji z produktami

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -66,6 +66,10 @@ a:hover{
     background-image:url(./../images/stat.jpg);
 
 }
+.diet{
+    background-image:url(./../images/diet.jpg);
+
+}
 .bmi{
     background-image:url(./../images/bmi.jpg);
 
